Fixed alignment of buttons

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ h1 {
     width: 150px;
     border: 2px solid white;
     border-radius: 10px;
+    padding: 10px;
 }
 
 .header {
@@ -217,6 +218,7 @@ label {
     color: #dee4e7;
     font-size: 22px;
     transition: all .2s ease-in-out;
+    margin-left: 5px;
 }
 
 .github-link:hover {
@@ -229,5 +231,5 @@ label {
     flex-direction: column;
     flex: 1;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
 }
